objects/ADL_Survey__c.object
<CustomObject>
    <description>Created for Marketing Cloud.</description>
    <fields>
        <fullName>Attend_community_activities__c</fullName>
        <description>Attend community activities.</description>
        <inlineHelpText>Attend community activities.</inlineHelpText>
        <label>ADL_v1.0.3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attend_cultural_events__c</fullName>
        <description>Attend cultural events (e.g.,concerts, shows, exhibitions, theater).</description>
        <inlineHelpText>Attend cultural events (e.g.,concerts, shows, exhibitions, theater).</inlineHelpText>
        <label>ADL_v1.0.5</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attend_social_gatherings__c</fullName>
        <description>Attend social gatherings</description>
        <inlineHelpText>Attend social gatherings</inlineHelpText>
        <label>ADL_v1.0.4</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ADLs</relationshipLabel>
        <relationshipName>ADL_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>created for Marketing cloud</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_need_assistance_with_activity__c</fullName>
        <description>Do you currently need assistance with any of the following activities?</description>
        <inlineHelpText>Do you currently need assistance with any of the following activities?</inlineHelpText>
        <label>ADL_v1.0.12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_volunteer_work__c</fullName>
        <description>Do volunteer work.</description>
        <inlineHelpText>Do volunteer work.</inlineHelpText>
        <label>ADL_v1.0.9</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_a_car__c</fullName>
        <description>Drive a car</description>
        <inlineHelpText>Drive a car</inlineHelpText>
        <label>ADL_v1.0.6</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>created for Marketing Cloud</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hold_social_gatherings_at_your_house__c</fullName>
        <description>Hold social gatherings at your house.</description>
        <inlineHelpText>Hold social gatherings at your house.</inlineHelpText>
        <label>ADL_v1.0.2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participate_in_community_activities__c</fullName>
        <description>Participate in community activities (e.g., committees, associations).</description>
        <inlineHelpText>Participate in community activities (e.g., committees, associations).</inlineHelpText>
        <label>ADL_v1.0.11</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_gatherings_at_other_people_house__c</fullName>
        <description>Attend social gatherings at other people’s houses.</description>
        <inlineHelpText>Attend social gatherings at other people’s houses.</inlineHelpText>
        <label>ADL_v1.0.1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Take_longer_trips_out_of_town__c</fullName>
        <description>Take longer trips out of town or the country.</description>
        <inlineHelpText>Take longer trips out of town or the country.</inlineHelpText>
        <label>ADL_v1.0.8</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Take_short_trips_out_of_town__c</fullName>
        <description>Take short trips out of town.</description>
        <inlineHelpText>Take short trips out of town.</inlineHelpText>
        <label>ADL_v1.0.7</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_at_a_paid_job_position__c</fullName>
        <description>Work at a paid job position.</description>
        <inlineHelpText>Work at a paid job position.</inlineHelpText>
        <label>ADL_v1.0.10</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ADL</label>
    <nameField>
        <displayFormat>ADL-{0000000000}</displayFormat>
        <label>ADL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>